--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ const pageTitle = "About";
 
 <Layout title={pageTitle}>
   <div class="gif">
-    <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp" />
+    <img width="300" height="259" alt="Thinking" src="/HwnThinking.png" />
   </div>
   <h1>Do Tran</h1>
   <small>Digital Craftsman (Developer)</small>
