--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -6,7 +6,7 @@ const pageTitle = "Works";
 
 <Layout pageTitle={pageTitle}>
   <div class="gif">
-    <img width="300" height="259" alt="RaccoonLaptopGif" src="/laptop.webp" />
+    <img width="300" height="259" alt="Scripting" src="/HwnScript.png" />
   </div>
   <h2>Coding & Technical Blogging</h2>
   <p>
@@ -18,13 +18,13 @@ const pageTitle = "Works";
   <ul role="list" class="link-card-grid my-2">
     <Card
       href="https://github.com/shibuicat"
-      image="/Doguri_Pebbles_1.gif"
+      image="/CongThinking.png"
       title="Open Source"
       body="I have been working on some open-source projects that solve micro problems. Give them a star if you find them useful."
     />
     <Card
       href="https://meditation.shibuicat.com/tag/coding"
-      image="/blog.webp"
+      image="/HwnScript.png"
       title="Technical Blogging"
       body="This is where I share my thoughts and experiences about coding, software development, and technology."
     />
@@ -37,13 +37,13 @@ const pageTitle = "Works";
   <ul role="list" class="link-card-grid my-2">
     <Card
       href="https://github.com/"
-      image="/photography.webp"
+      image="/HwnGun.png"
       title="Photography"
       body="My photography work"
     />
     <Card
       href="https://meditation.shibuicat.com/tag/meditation"
-      image="/Doguri_Sleeping_1.gif"
+      image="/HwnQuestion.png"
       title="Shower Thoughts"
       body="My random thoughts and ideas that helped me navigate in life"
     />
