--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -6,7 +6,7 @@ const pageTitle = "Posts";
 
 <Layout pageTitle={pageTitle}>
   <div class="gif">
-    <img width="300" height="259" alt="RaccoonLaptopGif" src="/waving.gif" />
+    <img width="300" height="259" alt="" src="/HwnThinking.png" />
   </div>
   <h2>Blog</h2>
   <ul role="list" class="link-card-grid">
