add selection color

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,8 +11,8 @@ const pageTitle = "About";
   <small>Digital Craftsman (Developer)</small>
   <h2>About</h2>
   <p>
-    My name's Độ, from Ho Chi Minh City, Vietnam. I work as a software engineer
-    and am also a photography enthusiast. Feel free to drop me an email—we can
+    My name's Độ from Ho Chi Minh City, Vietnam. I work as a software engineer
+    and i'm also a photography enthusiast. Feel free to drop me an email—we can
     grab a coffee sometime.
   </p>
   <div>
