--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -29,7 +29,7 @@ const pageTitle = "Works";
       body="This is where I share my thoughts and experiences about coding, software development, and technology."
     />
   </ul>
-  <h2>Photography & Shower Thoughts</h2>
+  <h2>Photography & Meditation</h2>
   <p>
     I picked up this hobby in early 2025 around the same i changed my mindset
     and wanted to build something of my own to share with the world.
@@ -44,8 +44,8 @@ const pageTitle = "Works";
     <Card
       href="https://meditation.shibuicat.com/tag/meditation"
       image="/HwnQuestion.png"
-      title="Shower Thoughts"
-      body="My random thoughts and ideas that helped me navigate in life"
+      title="Meditation"
+      body="I meditate on ideas and thoughts"
     />
   </ul>
 </Layout>
