update adventure and photography

--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -31,21 +31,22 @@ const pageTitle = "Works";
   </ul>
   <h2>Photography & Meditation</h2>
   <p>
-    I picked up this hobby in early 2025 around the same i changed my mindset
-    and wanted to build something of my own to share with the world.
+    I picked up Photography in early 2025, This hobby keeps me reminded to go
+    out and explore the world. View the world under different lens and angles.
   </p>
+  <p>Meditation keeps my mind clear, steady and calm.</p>
   <ul role="list" class="link-card-grid my-2">
     <Card
-      href="https://github.com/"
+      href="https://adventure.shibuicat.com/"
       image="/HwnGun.png"
       title="Photography"
-      body="My photography work"
+      body="My photography work where I share my adventures and photos."
     />
     <Card
       href="https://meditation.shibuicat.com/tag/meditation"
       image="/HwnQuestion.png"
       title="Meditation"
-      body="I meditate on ideas and thoughts"
+      body="I meditate on thoughts, ideas, and experiences. This is where I share my meditation journey."
     />
   </ul>
 </Layout>
